@@ -1,3 +1,7 @@
+* 2014-03-13 - thorben.betten@open-xchange.com
+
+ - Fix for bug 29983: Perform a single UPDATE statement to change values and added retry mechanism in case of possibly detected deadlock
+
 * 2014-03-12 - thorben.betten@open-xchange.com
 
  - Fix for bug 28587: Ignore unused flags/permissions on access-combination equality check
